@@ -648,7 +648,7 @@ class UndeleteForm {
 		if( $this->mRestore && $this->mAction == "submit" ) {
 			global $wgUploadMaintenance;
 			if( $wgUploadMaintenance && $this->mTargetObj && $this->mTargetObj->getNamespace() == NS_FILE ) {
-				$wgOut->addWikiText('Deletion and restoration of images temporarily disabled during maintenance.' );
+				$wgOut->wrapWikiMsg( "<div class='error'>\n$1</div>\n", array( 'filedelete-maintenance' ) );
 				return;
 			}
 			return $this->undelete();
